argocd/apps/minecraft/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      server: mc
  template:
    metadata:
      labels:
        server: mc
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: mc
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
          image: itzg/minecraft-server:java8@sha256:bfc70477870696e63baee4977a338eae7576b912a51f02182897f86d07957110
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 150m
              memory: 2Gi
          # livenessProbe:
          #   exec:
          #     command: ["mc-health"]
          #   initialDelaySeconds: 120
          #   periodSeconds: 60
          # readinessProbe:
          #   exec:
          #     command: ["mc-health"]
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          #   failureThreshold: 12
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
