argocd/apps/minecraft/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mc
spec:
  replicas: 1
  serviceName: mc
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      server: mc
  template:
    metadata:
      labels:
        server: mc
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: mc
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
          image: itzg/minecraft-server:java21
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 150m
              memory: 2Gi
          # livenessProbe:
          #   exec:
          #     command: ["mc-health"]
          #   initialDelaySeconds: 120
          #   periodSeconds: 60
          # readinessProbe:
          #   exec:
          #     command: ["mc-health"]
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          #   failureThreshold: 12

  volumeClaimTemplates:
    - metadata:
        name: data
        annoations:
          longhorn.io/path:
            "/k8s-fast/minecraft"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
